Ready for the presentation as I'm ever going to be.

--- a/css/theme/source/bens.scss
+++ b/css/theme/source/bens.scss
@@ -29,3 +29,11 @@ $headingTextTransform: none;
 .reveal p {
   margin-bottom: 20px;
 }
+
+.reveal pre {
+  width: 100%;
+}
+
+.reveal pre code { 
+  padding: 10px;
+}
